2008-04-30  Geoffrey Garen  <ggaren@apple.com>

        WebCore build fix: forward-declare ScopeChain.

        * kjs/interpreter.h:

2008-04-30  Geoffrey Garen  <ggaren@apple.com>

        Build fix for JavaScriptGlue: export a missing symbol.

        * JavaScriptCore.exp:

2008-04-30  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Removed a lot of unused bits from ExecState, moving them into
        OldInterpreterExecState, the fake scaffolding class.
        
        The clutter was making it hard to see the forest from the trees.
        
        .4% SunSpider speedup, probably because ExecState::lexicalGlobalObject()
        is faster now.

2008-04-29  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 18643: SQUIRRELFISH: need to support implicit function calls (valueOf, toString, getters/setters)
        <https://bugs.webkit.org/show_bug.cgi?id=18643>

        Prevent static slot optimisation for new variables and functions in
        globally re-entrant code called from an an implicit function call.

        This is necessary to prevent us from needing to resize the global
        slot portion of the root RegisterFile during an implicit (and hence
        unguarded) function call.

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::CodeGenerator):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::execute):
        * VM/RegisterFile.h:
        * VM/RegisterFileStack.cpp:
        (KJS::RegisterFileStack::pushGlobalRegisterFile):
        (KJS::RegisterFileStack::popGlobalRegisterFile):
        (KJS::RegisterFileStack::pushFunctionRegisterFile):
        (KJS::RegisterFileStack::popFunctionRegisterFile):
        * VM/RegisterFileStack.h:
        (KJS::RegisterFileStack::inImplicitFunctionCall):
        (KJS::RegisterFileStack::lastGlobal):
        * kjs/nodes.cpp:
        (KJS::ProgramNode::generateCode):
        * kjs/nodes.h:
        (KJS::ProgramNode::):
