@@ -280,7 +280,6 @@ __ZNK3KJS8JSObject9classInfoEv
 __ZNK3KJS8JSObject9classNameEv
 __ZNK3KJS8JSObject9toBooleanEPNS_9ExecStateE
 __ZNK3KJS8Profiler23printDataInspectorStyleEj
-__ZNK3KJS9ExecState19lexicalGlobalObjectEv
 __ZNK3KJS9HashTable11createTableEv
 __ZNK3WTF8Collator7collateEPKtmS2_m
 __ZTVN3KJS14JSGlobalObjectE
